; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_valid_slice_name.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_valid_slice_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"x.slice\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c".slice\00", align 1
@UNIT_NAME_PLAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @valid_slice_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @valid_slice_name(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %40

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = call i64 @STRLEN(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %40

17:                                               ; preds = %12
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  %21 = getelementptr inbounds i8, i8* %20, i64 -6
  %22 = call i64 @memcmp(i8* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 6)
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %39

24:                                               ; preds = %17
  %25 = load i64, i64* %5, align 8
  %26 = add i64 %25, 1
  %27 = call i8* @llvm.stacksave()
  store i8* %27, i8** %6, align 8
  %28 = alloca i8, i64 %26, align 16
  store i64 %26, i64* %7, align 8
  %29 = load i8*, i8** %4, align 8
  %30 = load i64, i64* %5, align 8
  %31 = call i32 @memcpy(i8* %28, i8* %29, i64 %30)
  %32 = load i64, i64* %5, align 8
  %33 = getelementptr inbounds i8, i8* %28, i64 %32
  store i8 0, i8* %33, align 1
  %34 = call i8* @cg_unescape(i8* %28)
  store i8* %34, i8** %8, align 8
  %35 = load i8*, i8** %8, align 8
  %36 = load i32, i32* @UNIT_NAME_PLAIN, align 4
  %37 = call i32 @unit_name_is_valid(i8* %35, i32 %36)
  store i32 %37, i32* %3, align 4
  %38 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %38)
  br label %40

39:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %24, %16, %11
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @STRLEN(i8*) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i8* @cg_unescape(i8*) #1

declare dso_local i32 @unit_name_is_valid(i8*, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
